# Splengine

./: CMakeLists.txt  main.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
splengine/: core.cpp  core.h  entity.cpp  entity.h  main  renderer.cpp  renderer.h  scene.cpp  scene.h
splengine/components/: component.cpp  component.h  transform.cpp  transform.h  transformcomponent.cpp  transformcomponent.h  triangle.cpp  triangle.h
testproject/: main.cpp  testentity.cpp  testentity.h  testscene.cpp  testscene.h
